# Ma_Golide_Satellites

./: .replit  README.md  app.py  index.html  pyproject.toml  replit.md  server.js  server.py
assayer/: accuracy_engine.py  bet_record.py  highest_quarter.py  pipeline_writer.py
attached_assets/: Pasted--Ma-Assayer-Python-port-of-the-core-purity-engine-Separ_1776325208274.txt  Pasted--SUPER-PROMPT-FOR-REPLIT-AI-CONTEXT-You-re-debugging-a-_1776174721439.txt  Pasted--SUPER-PROMPT-FOR-REPLIT-AI-WITH-GITHUB-PUSH-CONTEXT-Yo_1776174847640.txt  Pasted--function-generateCompleteAccuracyReport-ss-ss-ss-Sprea_1776166921510.txt  Pasted-Below-are-the-two-copy-paste-friendly-replacements-you-_1776184661556.txt  Pasted-I-found-the-problem-Looking-at-your-buildAccumulator-fu_1776175886924.txt  Pasted-You-are-an-elite-full-stack-betting-systems-architect-W_1776325167458.txt  Pasted-You-re-right-Looking-at-the-logs-buildAccumulator-HIGHE_1776176038542.txt  Pasted-i-want-it-to-pause-create-a-timer-and-conitnue-automati_1776186750666.txt  United_States_(NBA)_J10_1776325226266.xlsx
auth/: google_auth.py
docs/: Accumulator_Builder.gs  Bootstrap_Backdoor.gs  Contract_Enforcement.gs  Contract_Enforcer.gs  Data_Parser.gs  Forecaster.gs  Game_Processor.gs  Inventory_Manager.gs  Margin_Analyzer.gs  Module4.md  Module5.md  Module_2.md  Module_3.md  Module_5.md  Module_8.md  Module_9.md  Sheet_Setup.gs  Signal_Processor.gs  fix_triggers.gs
fetcher/: sheet_fetcher.py
ma_assayer/: README.md
ma_assayer/docs/: ColResolver_ColumnMatching.gs  ConfigLedger_Reader.gs  (+9 more)
templates/: dashboard.html
(+3 files in other folders)
